--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,25 @@
 body {
     margin: 0;
     background-image: linear-gradient(to right, #191919 0%, #000000 100%);
-}
-
-.logo {
     color: white;
 }
 
+/* Navigation */
+
+.logo {
+    color: white;
+    font-size: 22px;
+}
+
 .header__navbar {
-    overflow: hidden;
+    position: fixed;
+    right: 0px;
+    left: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1% 4%;
+    font-size: 19px;
 }
 
 .header__navbar-flex-ul {
@@ -41,4 +48,16 @@ body {
 
 .social svg {
     padding-right: 8px;
+}
+
+/* Welcome section */
+
+.welcome-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    font-size: 3rem;
 }
