--- a/css/style.css
+++ b/css/style.css
@@ -1,63 +1,130 @@
-body {
-    margin: 0;
-    background-image: linear-gradient(to right, #191919 0%, #000000 100%);
-    color: white;
+@media all and (max-width: 800px) {
+    body {
+        margin: 0;
+        background-image: linear-gradient(to right, #191919 0%, #000000 100%);
+        color: white;
+    }
+    
+    /* Navigation */
+    
+    .logo {
+        color: white;
+        font-size: 15px;
+    }
+    
+    .header__navbar {
+        position: fixed;
+        right: 0px;
+        left: 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1% 3%;
+        font-size: 16px;
+    }
+    
+    .header__navbar-flex-ul {
+        display: flex;
+        list-style-type: none;
+        text-decoration: none;
+        padding-left: 0;
+    }
+
+    
+    .header__navbar-link {
+        color: #f2f2f2;
+        text-align: center;
+        padding: 15px;
+    }
+    
+    
+    
+    .social {
+        display: flex;
+        align-items: center;
+        color: white;
+        text-decoration: none;
+    }
+    
+    .social svg {
+        padding-right: 8px;
+    }
+    
+    /* Welcome section */
+    
+    .welcome-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100vh;
+        font-size: 2rem;
+    }
 }
 
-/* Navigation */
-
-.logo {
-    color: white;
-    font-size: 22px;
-}
-
-.header__navbar {
-    position: fixed;
-    right: 0px;
-    left: 0px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1% 4%;
-    font-size: 19px;
-}
-
-.header__navbar-flex-ul {
-    display: flex;
-    list-style-type: none;
-}
-
-.header__navbar-flex-ul a {
-    text-decoration: none;
-}
-
-.header__navbar-link {
-    color: #f2f2f2;
-    text-align: center;
-    padding: 15px;
-}
-
-
-
-.social {
-    display: flex;
-    align-items: center;
-    color: white;
-    text-decoration: none;
-}
-
-.social svg {
-    padding-right: 8px;
-}
-
-/* Welcome section */
-
-.welcome-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    font-size: 3rem;
-}
+@media all and (min-width: 800px) {
+    body {
+        margin: 0;
+        background-image: linear-gradient(to right, #191919 0%, #000000 100%);
+        color: white;
+    }
+    
+    /* Navigation */
+    
+    .logo {
+        color: white;
+        font-size: 22px;
+    }
+    
+    .header__navbar {
+        position: fixed;
+        right: 0px;
+        left: 0px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1% 4%;
+        font-size: 19px;
+    }
+    
+    .header__navbar-flex-ul {
+        display: flex;
+        list-style-type: none;
+    }
+    
+    .header__navbar-flex-ul a {
+        text-decoration: none;
+    }
+    
+    .header__navbar-link {
+        color: #f2f2f2;
+        text-align: center;
+        padding: 15px;
+    }
+    
+    
+    
+    .social {
+        display: flex;
+        align-items: center;
+        color: white;
+        text-decoration: none;
+    }
+    
+    .social svg {
+        padding-right: 8px;
+    }
+    
+    /* Welcome section */
+    
+    .welcome-section {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100vh;
+        font-size: 3rem;
+    }
+  }
