--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -20,11 +20,6 @@ body {
     background-image: linear-gradient(to right, #191919 0%, #000000 100%);
 }
 
-// .logo-img {
-//     width: 50px;
-//     height: 50px;
-// }
-
 .header__navbar-link {
     color: #f2f2f2;
     padding: 5px 15px;
@@ -53,7 +48,22 @@ body {
 
 
 @media all and (max-width: 420px) {   
+    .header__navbar-flex-ul {
+        display: flex;
+        list-style-type: none;
+        align-items: center;
+        flex-direction: column;
+        padding-left: 0;
+    }
 
+    .header__navbar-link {
+        color: #f2f2f2;
+        padding: 0;
+        text-decoration: none;
+    }
+}
+
+@media all and (max-width: 620px) {   
     .header__navbar-flex-ul {
         display: flex;
         list-style-type: none;
