--- a/sass/components/index.css
+++ b/sass/components/index.css
@@ -48,6 +48,20 @@ body {
     text-decoration: none;
   }
 }
+@media all and (max-width: 620px) {
+  .header__navbar-flex-ul {
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+    flex-direction: column;
+    padding-left: 0;
+  }
+  .header__navbar-link {
+    color: #f2f2f2;
+    padding: 0;
+    text-decoration: none;
+  }
+}
 @media all and (max-width: 800px) {
   /* Navigation */
   .logo {
@@ -101,5 +115,44 @@ body {
     width: 100%;
     height: 100vh;
     font-size: 3rem;
+  }
+}
+.about-me {
+  width: 100%;
+  height: 50vh;
+}
+
+.personal-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pers-img {
+  width: 250px;
+  height: 250px;
+  padding-right: 100px;
+}
+
+@media all and (max-width: 420px) {
+  .personal-info {
+    flex-direction: column;
+    align-items: center;
+  }
+  .pers-img {
+    width: 150px;
+    height: 150px;
+    padding-right: 0;
+  }
+}
+@media all and (max-width: 620px) {
+  .personal-info {
+    flex-direction: column;
+    align-items: center;
+  }
+  .pers-img {
+    width: 200px;
+    height: 200px;
+    padding-right: 0;
   }
 }/*# sourceMappingURL=index.css.map */
