--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -15,10 +15,17 @@
     padding-right: 100px;
 }
 
+.description {
+    padding: 5px 15px;
+
+    p {
+        text-align: center;
+    }
+}
+
 @media all and (max-width: 420px) {
     .personal-info {
         flex-direction: column;
-        align-items: center;
     }
 
     .pers-img {
@@ -31,7 +38,6 @@
 @media all and (max-width: 620px) { 
     .personal-info {
         flex-direction: column;
-        align-items: center;
     }
 
     .pers-img {
