--- a/sass/components/index.css
+++ b/sass/components/index.css
@@ -134,10 +134,16 @@ body {
   padding-right: 100px;
 }
 
+.description {
+  padding: 5px 15px;
+}
+.description p {
+  text-align: center;
+}
+
 @media all and (max-width: 420px) {
   .personal-info {
     flex-direction: column;
-    align-items: center;
   }
   .pers-img {
     width: 150px;
@@ -148,7 +154,6 @@ body {
 @media all and (max-width: 620px) {
   .personal-info {
     flex-direction: column;
-    align-items: center;
   }
   .pers-img {
     width: 200px;
