--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,6 +1,7 @@
 .about-me {
     width: 100%;
     height: 50vh;
+    font-size: 22px;
 }
 
 .personal-info {
@@ -24,6 +25,9 @@
 }
 
 @media all and (max-width: 420px) {
+    .about-me {
+        font-size: 15px;
+    }
     .personal-info {
         flex-direction: column;
     }
@@ -36,6 +40,10 @@
 }
 
 @media all and (max-width: 620px) { 
+    .about-me {
+        font-size: 20px;
+    }
+
     .personal-info {
         flex-direction: column;
     }
