--- a/sass/components/index.css
+++ b/sass/components/index.css
@@ -120,6 +120,7 @@ body {
 .about-me {
   width: 100%;
   height: 50vh;
+  font-size: 22px;
 }
 
 .personal-info {
@@ -142,6 +143,9 @@ body {
 }
 
 @media all and (max-width: 420px) {
+  .about-me {
+    font-size: 15px;
+  }
   .personal-info {
     flex-direction: column;
   }
@@ -152,6 +156,9 @@ body {
   }
 }
 @media all and (max-width: 620px) {
+  .about-me {
+    font-size: 20px;
+  }
   .personal-info {
     flex-direction: column;
   }
