--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,6 +1,9 @@
+.padding-title {
+    padding: 2%;
+}
 .about-me {
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     font-size: 22px;
 }
 
@@ -25,6 +28,7 @@
 }
 
 @media all and (max-width: 420px) {
+    
     .about-me {
         font-size: 15px;
     }
