--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -1,3 +1,9 @@
+.titles {
+    font-weight: 500;
+    font-size: 2.3rem;
+    text-align: center;
+}
+
 .projects-section {
     display: flex;
     width: 100%;
@@ -9,6 +15,10 @@
 }
 
 @media all and (max-width: 750px) { 
+    .projects-title {
+        font-weight: 500;
+        font-size: 1.5rem;
+    }
     .projects-section {
         display: flex;
         width: 100%;
