--- a/sass/components/index.css
+++ b/sass/components/index.css
@@ -156,9 +156,13 @@ body {
     font-size: 3rem;
   }
 }
+.padding-title {
+  padding: 2%;
+}
+
 .about-me {
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   font-size: 22px;
 }
 
@@ -207,6 +211,12 @@ body {
     padding-right: 0;
   }
 }
+.titles {
+  font-weight: 500;
+  font-size: 2.3rem;
+  text-align: center;
+}
+
 .projects-section {
   display: flex;
   width: 100%;
@@ -218,6 +228,10 @@ body {
 }
 
 @media all and (max-width: 750px) {
+  .projects-title {
+    font-weight: 500;
+    font-size: 1.5rem;
+  }
   .projects-section {
     display: flex;
     width: 100%;
