--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -7,11 +7,11 @@
 .projects-section {
     display: flex;
     width: 100%;
-}
 
-.card {
-    width: 50%;
-    padding: 5%;
+    .card {
+      width: 50%;
+      padding: 5%;
+  }
 }
 
 @media all and (max-width: 750px) { 
@@ -24,10 +24,10 @@
         width: 100%;
         flex-direction: column;
         align-items: center;
-    }
 
-    .card {
-        width: 85%;
+        .card {
+          width: 85%;
+      }
     }
 }
 
@@ -187,14 +187,17 @@
             backdrop-filter: blur(10px);
   }
   
-  a.card-v2 {
+  a {
+    .card-v2 {
     display: block;
     text-decoration: none;
     transition: box-shadow 0.2s;
   }
-  a.card-v2:hover {
+
+  .card-v2:hover {
     box-shadow: 0 0.9px 1.5px rgba(0, 0, 0, 0.03),0 3.1px 5.5px rgba(0, 0, 0, 0.08),0 14px 25px rgba(0, 0, 0, 0.12);
   }
+}
   
   /* utility classes */
   .cy7-opacity-70\% {
